# segfit

./: .gitignore  CMakeLists.txt  Makefile  README.md
lib/: CMakeLists.txt
python/: CMakeLists.txt  pysegfit.cpp
src/: CMakeLists.txt  FitAlg.cpp  FitAlg.hpp  FitAlgFactory.cpp  FitAlgFactory.hpp  Makefile  SegAlg.cpp  SegAlg.hpp  SegAlgFactory.cpp  SegAlgFactory.hpp  ablineFit.cpp  ablineFit.hpp  constFit.cpp  constFit.hpp  dpSeg.cpp  dpSeg.hpp  logger.cpp  logger.hpp  main.cpp  option.cpp  option.hpp  program.h  segFit.cpp  segFit.hpp  topDownSeg.cpp  topDownSeg.hpp  view.py  vpabcFit.cpp  vpabcFit.hpp
